--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.4",
+        "maddhatter/laravel-fullcalendar": "dev-develop",
         "stripe/stripe-php": "^10.1"
     },
     "require-dev": {
