--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.4",
         "maddhatter/laravel-fullcalendar": "dev-develop",
+        "pusher/pusher-php-server": "^7.2",
         "stripe/stripe-php": "^10.1"
     },
     "require-dev": {
