--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /public/vehicles
 /storage/*.key
 /vendor
+/public
 .env
 .env.backup
 .phpunit.result.cache
@@ -15,3 +16,4 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.htaccess
