--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "webpack-cli": "^4.10.0"
+    },
+    "dependencies": {
+        "lazysizes": "^5.3.2"
     }
 }
